# STRO4K

./: .gitignore  README.md  build4k  build4kdefault  fens.txt  game.txt  nn-13f172599bc152d5.nnue  nn-1f5545e42411f1ab.nnue  nn-3249e62b0b08353f.nnue  nn-419c151bb0486730.nnue  nn-72bee0bb01c8694b.nnue  nn-7ea3423c81571dd7.nnue  nn-e3a9863b410c4598.nnue  nn-f28f93897b2f1437.nnue  unpack.sh
build4krs/: Cargo.toml
build4krs/src/: main.rs
stro/: Cargo.toml  build.rs  makefile
stro/src/: asm.rs  consts.rs  evaluate.rs  game.rs  lib.rs  main.rs  movegen.rs  moveorder.rs  position.rs  search.rs  tt.rs
stro/src/search/: threads.rs
stro4k/src/: combined.asm  common.asm  evaluate.asm  game.asm  movegen.asm  moveorder.asm  search.asm  uci.asm
