[package]
name = "stro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = { version = "0.5.0", optional = true }
libc = { version = "0.2.140", optional = true, default-features = false }

[profile.release]
lto = "fat"

[features]
asm = ["jemallocator", "libc"]
