[package]
name = "stro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.140", optional = true, default-features = false }

[profile.release]
lto = "fat"

[features]
# default = ["asm"]
asm = ["libc"]
nn_path_env = []
