[package]
name = "stro"
version = "4.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.140", optional = true, default-features = false }

[profile.release]
lto = "fat"

[features]
# default = ["asm"]
asm = ["libc"]
